--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,6 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4SIVKpOq6bhYAs-iWZxpSZmWkv2FpcTc&v=3.exp&libraries=geometry,places"></script>
   </body>
 </html>
 
