--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Abel|Days+One|Merriweather+Sans|Share" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <title>Coffee Connect</title>
+    <title>Coffee Connect V2.1</title>
   </head>
   <body>
     
